# pirulo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  pirulo.qrc  window.cpp  window.h
appimage/usr/share/applications/: pirulo.desktop
